# nanobin

./: .env.example  .gitignore  Cargo.toml  README.md  tsconfig.json
src/: database.rs  main.rs  routes.rs  templates.rs
templates/layouts/: base.html
templates/pages/: archive.html  home.html  paste.html  settings.html
templates/partials/: footer.html  header.html
www/lib/nanobin/: identity.js  nanobin.js  storage.js  utilities.js
www/lib/ts/: identity.ts  nanobin.ts  storage.ts  utilities.ts
www/lib/vendors/: htmx@2.0.0.js  lit-core@3.1.4.min.js  lit-core@3.1.4.min.js.map
www/styles/: styles.css
